# pokemon-capstone-backend

./: .gitignore  db.sqlite3  pyproject.toml
mainapp/: admin.py  models.py  serializers.py  urls.py  views.py
mainapp/management/commands/: bootstrap_data.py
mainapp/migrations/: 0001_initial.py  0002_auto_20201007_1831.py  0002_auto_20201008_1918.py  0002_auto_20201015_1902.py  0003_auto_20201007_1855.py  0003_auto_20201008_2214.py  0003_caughtpokemon.py  0004_auto_20201008_1710.py  0004_auto_20201008_2253.py
mainapp/start/: serializers.py  views.py
mainapp/templates/: form.html
pokeapp/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
